added a proper SVG favicon

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <meta name="twitter:image:alt" content="Ayan Pandey - Full Stack Developer Portfolio" />
     
     <!-- ========== FAVICONS & APP ICONS ========== -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/png" href="/A.png" />
     <link rel="apple-touch-icon" href="/A.png" />
     <link rel="manifest" href="/manifest.json" />
