--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     
     <!-- ========== FAVICONS & APP ICONS ========== -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48.png" />
     <link rel="icon" type="image/png" href="/A.png" />
     <link rel="apple-touch-icon" href="/A.png" />
     <link rel="manifest" href="/manifest.json" />
