--- a/index.html
+++ b/index.html
@@ -45,10 +45,14 @@
     <meta name="twitter:image:alt" content="Ayan Pandey - Full Stack Developer Portfolio" />
     
     <!-- ========== FAVICONS & APP ICONS ========== -->
+    <!-- Google SERP favicon (must be .ico or 48x48 PNG at root) -->
+    <link rel="icon" href="/favicon.ico" sizes="48x48" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48.png" />
-    <link rel="icon" type="image/png" href="/A.png" />
-    <link rel="apple-touch-icon" href="/A.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/A.png" />
+    <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#000000" />
     <meta name="color-scheme" content="dark" />
