SEO: fix meta description length and extra h1s

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <!-- ========== PRIMARY SEO - Name Dominance ========== -->
     <title>Ayan Pandey | Full Stack Developer | React & Node.js Expert</title>
-    <meta name="description" content="Ayan Pandey is a Full Stack Developer specializing in React, Node.js, TypeScript, and modern web technologies. View portfolio, projects, and hire Ayan Pandey for web development." />
+    <meta name="description" content="Ayan Pandey is a Full Stack Developer specializing in React, Node.js, and TypeScript. View portfolio, projects, and hire Ayan Pandey." />
     <meta name="keywords" content="Ayan Pandey, Ayan Pandey developer, Ayan Pandey portfolio, Full Stack Developer, React Developer, Node.js Developer, Web Developer India, ayanpandey.in" />
     <meta name="author" content="Ayan Pandey" />
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
