SEO: add WebPage/FAQ schema, AI summary, meta description

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <!-- ========== PRIMARY SEO - Name Dominance ========== -->
     <title>Ayan Pandey | Full Stack Developer | React & Node.js Expert</title>
-    <meta name="description" content="Ayan Pandey is a Full Stack Developer specializing in React, Node.js, and TypeScript. View portfolio, projects, and hire Ayan Pandey." />
+    <meta name="description" content="Ayan Pandey is a Full Stack Developer specializing in React, Node.js, and TypeScript. View portfolio projects, services, certifications, and FAQs." />
     <meta name="keywords" content="Ayan Pandey, Ayan Pandey developer, Ayan Pandey portfolio, Full Stack Developer, React Developer, Node.js Developer, Web Developer India, ayanpandey.in" />
     <meta name="author" content="Ayan Pandey" />
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
@@ -153,6 +153,80 @@
         "Node.js Development",
         "Frontend Development",
         "Backend Development"
+      ]
+    }
+    </script>
+
+    <!-- ========== STRUCTURED DATA - WebPage Schema ========== -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "@id": "https://ayanpandey.in/#webpage",
+      "url": "https://ayanpandey.in/",
+      "name": "Ayan Pandey | Full Stack Developer",
+      "description": "Ayan Pandey is a Full Stack Developer specializing in React, Node.js, and TypeScript. View portfolio projects, services, certifications, and FAQs.",
+      "isPartOf": {
+        "@id": "https://ayanpandey.in/#website"
+      },
+      "about": {
+        "@id": "https://ayanpandey.in/#person"
+      },
+      "primaryImageOfPage": {
+        "@type": "ImageObject",
+        "url": "https://ayanpandey.in/og-image.png"
+      },
+      "inLanguage": "en-IN"
+    }
+    </script>
+
+    <!-- ========== STRUCTURED DATA - FAQPage Schema ========== -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "@id": "https://ayanpandey.in/#faq",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "What does your standard website design package include?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "My standard package includes responsive design, modern UI/UX, performance optimization, SEO basics, and cross-browser compatibility. I also provide source code and documentation upon completion."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Do you handle both frontend and backend work?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes, I am a full-stack developer. I can handle everything from frontend interfaces using React, Vue, or vanilla JavaScript to backend APIs with Node.js, Express, and database management."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "How long does a website project usually take?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Timeline varies based on complexity. A simple landing page takes 1-2 weeks, while a full-featured web application can take 4-8 weeks. I provide detailed timelines during the initial consultation."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Can you improve my site's SEO and performance?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Absolutely! I optimize websites for speed, implement SEO best practices, ensure proper meta tags, improve Core Web Vitals, and make sites mobile-friendly to boost search rankings and user experience."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Do you offer maintenance after my website launches?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes, I offer ongoing maintenance packages including updates, bug fixes, security patches, and feature additions. I can also provide training so you can manage content yourself."
+          }
+        }
       ]
     }
     </script>
